--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:~/servicedb
 spring.datasource.driverClassName=org.h2.Driver
