--- a/service/src/main/resources/mail-config.properties
+++ b/service/src/main/resources/mail-config.properties
@@ -5,6 +5,7 @@ mail.smtp.auth=true
 mail.smtp.ssl.enable=true
 mail.smtp.socketFactory.port=465
 mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+mail.smtp.starttls.enable=true
 
 mail.store.protocol=imaps
 mail.imaps.host=imap.gmail.com
